# Rust_mini_projects

.github/workflows/: ci.yml
day10_escrow_anchor/: Anchor.toml  Cargo.toml  package-lock.json
day10_escrow_anchor/.github/workflows/: ci.yml
day10_escrow_anchor/programs/day10_escrow_anchor/: Cargo.toml
day10_escrow_anchor/programs/day10_escrow_anchor/src/: errors.rs  lib.rs  state.rs
day10_escrow_anchor/programs/day10_escrow_anchor/src/contexts/: deposit.rs  initialize.rs  mod.rs  withdraw.rs
day10_escrow_anchor/programs/day10_escrow_anchor/src/instructions/: deposit.rs  initialize.rs  withdraw.rs
day10_escrow_anchor/programs/day10_escrow_anchor/src/state/: escrow.rs  guards.rs  mod.rs
day10_escrow_anchor/tests/: day10_escrow_anchor.ts
day10_escrow_frontend/: package-lock.json  package.json
day10_escrow_frontend/app/: layout.tsx  page.tsx  providers.tsx
day10_escrow_frontend/lib/: anchor.ts  idl.json
day1_Text_Analyzer_CLI/: Cargo.toml
day1_Text_Analyzer_CLI/src/: main.rs
day2_Bank_CLI_App/src/: main.rs
day2_bank_cli_app/: Cargo.toml
day2_bank_cli_app/src/: main.rs
day3_counter_program/: Cargo.toml  deploy.sh
day3_counter_program/src/: lib.rs
day3_counter_program/test-ledger/: genesis.tar.bz2  (+6 more)
day3_file_reader_cli/: Cargo.toml  sample.txt
day4_optional_cli_tool/: .gitignore  Cargo.toml
day5_config_loader/: Cargo.toml
day5_counter_program_with_reset_logic/: Cargo.toml
day6_mathops_using_generics/: .gitignore  Cargo.toml
day7_reusable_logic_using_modules_and_crates/: Cargo.toml
day9_smart_pointers_and_anchor_pdas/: README.md
(+54 files in other folders)
